--- a/udemy/scss/style.scss
+++ b/udemy/scss/style.scss
@@ -1,3 +1,5 @@
+
+
 .label {
     margin: 0 auto;
     height: 24px;
@@ -80,6 +82,50 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+    }
+}
+.require {
+    padding: 68px 0 84px 0;
+    &_block {
+        margin: 33px 0;
+        &_mbn {
+            margin-bottom: 0px;
+        }
+    }
+    &_title {
+        font-size: 22px;
+        color: #1ca8c3;
+    }
+    &_list {
+        list-style-type: none;
+        padding-left: 50px;
+        margin-top: 22px;
+        li {
+            display: block;
+            position: relative;
+            font-size: 17px;
+            line-height: 24px;
+            margin-bottom: 10px;
+            &::before {
+                content: '';
+                position: absolute;
+                left: -31px;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 21px;
+                height: 20px;
+                background: url('../img/item.jpg') center (center/cover) no-repeat;
+            }
+        }
+    }
+    &_descr {
+        margin-top: 25px;
+        color: #1ca8c3;
+    }
+    .warning {
+        .require_title {
+            color: red;
         }
     }
 }
