--- a/HW4/css/style.css
+++ b/HW4/css/style.css
@@ -106,29 +106,14 @@ a {
 .sub-article {
   background-color: white;
   height: 33vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: center; }
+  padding: 0 3em; }
   .sub-article .container {
     height: 100%;
-    display: flex; }
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
     .sub-article .container .big_txt {
-      width: 50%;
-      font-size: 24px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap; }
-      .sub-article .container .big_txt .one {
-        display: flex;
-        width: 100%;
-        height: 30px; }
-      .sub-article .container .big_txt .two {
-        display: flex;
-        width: 100%;
-        height: 30px; }
+      width: 30%;
+      font-size: 24px; }
     .sub-article .container .small_txt {
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      width: 50%; }
