--- a/sample/scss/_main.scss
+++ b/sample/scss/_main.scss
@@ -15,6 +15,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding-top: 40px;
 
             h1 {
                 font-size: 50px;
@@ -31,6 +32,7 @@
             &_txt {
                 font-size: 16px;
                 margin-top: 22px;
+                width: 470px;
             }
 
             .button {
@@ -154,6 +156,7 @@
         margin-top: 30px;
         text-align: center;
         line-height: 20px;
+        width: 450px;
 
         a {
             text-decoration: none;
@@ -186,6 +189,7 @@
             .postings_txt {
                 font-size: 15px;
                 margin-top: 30px;
+                width: 270px;
             }
 
             .postings_btn {
@@ -210,6 +214,7 @@
         margin-top: 30px;
         text-align: center;
         line-height: 20px;
+        width: 465px;
 
         a {
             text-decoration: none;
@@ -237,5 +242,6 @@
 
     &_txt {
         text-align: center;
+        width: 435px;
     }
 }
