--- a/sample/scss/_media.scss
+++ b/sample/scss/_media.scss
@@ -1,8 +1,15 @@
 @media screen and (max-width: 576px) {
     .main {
+        padding: 60px 0px;
         .container {
             display: flex;
             flex-direction: column-reverse;
+
+            .title {
+                &_txt {
+                    width: 420px;
+                }
+            }
 
 
             .category-section {
@@ -23,11 +30,11 @@
                 &_3 {
                     margin-top: 10px;
                     background-position: 100%;
-                    width: 62%;
+                    width: 64%;
                 }
     
                 &_4 {
-                    width: 35%;
+                    width: 33%;
                     background-size: cover;
                     margin-top: 10px;
                     margin-left: 10px;
@@ -50,4 +57,59 @@
 
         }
     }
+
+    .advantage {
+        height: 300px;
+        .container {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 40px;
+    
+            .item {
+                height: 0px;
+    
+                &_txt {
+                    width: 300px;
+                }
+            }
+    
+        }
+    }
+
+    .promotion {
+        &_txt {
+            width: 340px;
+        }
+    }
+
+    .access {
+        &_txt {
+            width: 310px;
+        }
+    }
+
+    .postings {
+        height: 600px;
+        .container {
+            flex-wrap: wrap-reverse;
+            height: 500px;
+            padding-top: 50px;
+
+            .postings_img {
+                width: 100%;
+            }
+
+            .postings_txt {
+                width: 310px;
+            }
+        }
+    }
+
+    .feedback {
+        &_txt {
+            width: 250px;
+        }
+    }
 }
+
