--- a/sample/css/style.css
+++ b/sample/css/style.css
@@ -78,7 +78,7 @@ table {
     .main .container .category-section {
       display: flex;
       flex-wrap: wrap;
-      margin-left: 30px; }
+      margin-left: 25px; }
       .main .container .category-section_1 {
         display: flex;
         align-items: end;
@@ -89,37 +89,37 @@ table {
         width: 70%;
         height: 160px;
         background: url("../img/solarbattery.jpeg") center center/cover no-repeat;
-        margin-left: 15px;
+        margin-left: 12px;
         display: flex;
         align-items: end; }
       .main .container .category-section_3 {
         width: 70%;
         height: 160px;
         background: url("../img/wheat.jpeg") center center/cover no-repeat;
-        margin-top: 15px;
+        margin-top: 12px;
         display: flex;
         align-items: end; }
       .main .container .category-section_4 {
         width: 27%;
         height: 160px;
         background: url("../img/iron.jpeg") center center/cover no-repeat;
-        margin-top: 15px;
-        margin-left: 15px;
+        margin-top: 12px;
+        margin-left: 12px;
         display: flex;
         align-items: end; }
       .main .container .category-section_5 {
         width: 57%;
         height: 160px;
         background: url("../img/chip.jpeg") center center/cover no-repeat;
-        margin-top: 15px;
+        margin-top: 12px;
         display: flex;
         align-items: end; }
       .main .container .category-section_6 {
         width: 40%;
         height: 160px;
         background: url("../img/tractor.jpeg") center center/cover no-repeat;
-        margin-top: 15px;
-        margin-left: 15px;
+        margin-top: 12px;
+        margin-left: 12px;
         display: flex;
         align-items: end; }
 
@@ -164,8 +164,6 @@ table {
     width: 70%;
     height: 300px;
     display: flex; }
-    .postings .container .postings_img {
-      width: 50%; }
     .postings .container .postings_box .postings_title {
       font-size: 28px; }
     .postings .container .postings_box .postings_txt {
@@ -206,6 +204,81 @@ table {
   .feedback_txt {
     text-align: center;
     width: 435px; }
+
+@media screen and (max-width: 1200px) {
+  .main {
+    padding: 60px 0px; }
+    .main .container {
+      display: flex;
+      flex-direction: column-reverse; }
+      .main .container .title {
+        align-items: center; }
+        .main .container .title_txt {
+          width: 420px; }
+      .main .container .category-section {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 0px; }
+        .main .container .category-section_1 {
+          background-position: 100%; }
+        .main .container .category-section_2 {
+          background-position: 100%;
+          margin-left: 10px; }
+        .main .container .category-section_3 {
+          margin-top: 10px;
+          background-position: 100%;
+          width: 64%; }
+        .main .container .category-section_4 {
+          width: 33%;
+          background-size: cover;
+          margin-top: 10px;
+          margin-left: 10px; }
+        .main .container .category-section_5 {
+          background-position: 100%;
+          margin-top: 10px; }
+        .main .container .category-section_6 {
+          background-position: 100%;
+          margin-top: 10px;
+          margin-left: 10px; }
+  .advantage .container {
+    width: 100%; }
+    .advantage .container .item {
+      width: 320px; }
+      .advantage .container .item_txt {
+        width: 300px; } }
+
+@media screen and (max-width: 992px) {
+  .advantage {
+    height: 300px; }
+    .advantage .container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 40px; }
+      .advantage .container .item {
+        height: 0px; }
+        .advantage .container .item_txt {
+          width: 300px; }
+  .postings {
+    height: 680px; }
+    .postings .container {
+      flex-wrap: wrap-reverse;
+      height: 650px;
+      padding-top: 50px; }
+      .postings .container .postings_img {
+        width: 100%;
+        margin-top: 50px; }
+      .postings .container .postings_txt {
+        width: 310px; } }
+
+@media screen and (max-width: 768px) {
+  .postings {
+    height: 500px; }
+    .postings .container {
+      height: 500px; }
+      .postings .container .postings_img {
+        width: 400px;
+        height: 260px; } }
 
 @media screen and (max-width: 576px) {
   .main {
