--- a/sample/scss/_media.scss
+++ b/sample/scss/_media.scss
@@ -1,3 +1,133 @@
+@media screen and (max-width: 1200px) {
+    .main {
+        padding: 60px 0px;
+        .container {
+            display: flex;
+            flex-direction: column-reverse;
+
+            .title {
+                align-items: center;
+                &_txt {
+                    width: 420px;
+                }
+            }
+
+
+            .category-section {
+                display: flex;
+                flex-wrap: wrap;
+                margin-left: 0px;
+    
+                &_1 {
+                    background-position: 100%;
+                }
+    
+                &_2 {
+                    background-position: 100%;
+                    margin-left: 10px;
+
+                }
+    
+                &_3 {
+                    margin-top: 10px;
+                    background-position: 100%;
+                    width: 64%;
+                }
+    
+                &_4 {
+                    width: 33%;
+                    background-size: cover;
+                    margin-top: 10px;
+                    margin-left: 10px;
+
+
+                }
+    
+                &_5 {
+                    background-position: 100%;
+                    margin-top: 10px;
+                }
+    
+                &_6 {
+                    background-position: 100%;
+                    margin-top: 10px;
+                    margin-left: 10px;
+
+                }
+            }
+
+        }
+    }
+
+    .advantage {
+        .container {
+            width: 100%;
+            .item {
+                width: 320px;
+
+                &_txt {
+                    width: 300px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .advantage {
+        height: 300px;
+        .container {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 40px;
+    
+            .item {
+                height: 0px;
+    
+                &_txt {
+                    width: 300px;
+                }
+            }
+    
+        }
+    }
+
+    .postings {
+        height: 680px;
+        .container {
+            flex-wrap: wrap-reverse;
+            height: 650px;
+            padding-top: 50px;
+
+            .postings_img {
+                width: 100%;
+                margin-top: 50px;
+            }
+
+            .postings_txt {
+                width: 310px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .postings {
+        height: 500px;
+        .container {
+            height: 500px;
+
+            .postings_img {
+                width: 400px;
+                height: 260px;
+
+            }
+
+        }
+    }
+}
+
 @media screen and (max-width: 576px) {
     .main {
         padding: 60px 0px;
