--- a/prosto3/css/style.css
+++ b/prosto3/css/style.css
@@ -160,6 +160,9 @@ i {
 b {
   font-weight: bold; }
 
+.blog.swiper .blog__tab.swiper-wrapper {
+  height: auto !important; }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -563,7 +566,6 @@ b {
       width: 405px;
       height: 307px; } }
 
-@media screen and (max-width: 700px) {
-  .blog .swiper {
-    width: 303px;
-    height: 284px; } }
+@media screen and (max-width: 540px) {
+  .blog__tab {
+    flex-wrap: nowrap; } }
