--- a/prosto3/scss/_media.scss
+++ b/prosto3/scss/_media.scss
@@ -155,9 +155,8 @@
     }
 }
 
-@media screen and (max-width: 700px) {
-    .blog .swiper {
-        width: 303px;
-        height: 284px;
+@media screen and (max-width: 540px) {
+    .blog__tab {
+        flex-wrap: nowrap;
     }
 }
