--- a/prosto3/scss/_reset.scss
+++ b/prosto3/scss/_reset.scss
@@ -164,3 +164,10 @@ i {
 b {
  font-weight: bold;
 }
+
+
+.blog.swiper {
+    .blog__tab.swiper-wrapper {
+        height: auto !important;
+    }
+}
