--- a/prosto3/scss/blocks/_footer.scss
+++ b/prosto3/scss/blocks/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     height: 230px;
     background-color: #0F0F11;
-    padding: 50px 40px 0px 40px;
+    padding: 50px 40px 0 40px;
 
     .footer__base {
         display: flex;
