--- a/prosto3/scss/_reset.scss
+++ b/prosto3/scss/_reset.scss
@@ -5,7 +5,6 @@ body {
 
 html,
 body,
-div,
 span,
 applet,
 object,
@@ -166,8 +165,8 @@ b {
 }
 
 
-.blog.swiper {
-    .blog__tab.swiper-wrapper {
+.blog-sm.swiper {
+    .blog-sm__tab.swiper.swiper-wrapper {
         height: auto !important;
     }
 }
